--- a/cluster/aufgabe1/aufgabe1.cabal
+++ b/cluster/aufgabe1/aufgabe1.cabal
@@ -5,7 +5,10 @@ License:        BSD3
 Author:         Paul Walger
 Synopsis:       Small package with two programs
 Build-Type:     Simple
-
-Executable simple
-  Build-Depends:  base, fgl, graphviz >= 2999.17, text, lens
+Executable t1
   Main-Is:        t1.hs
+  Build-Depends:  base, fgl, graphviz >= 2999.17, text, lens
+Executable t2
+  Main-Is:        t2.hs
+  Build-Depends:  base, fgl, graphviz >= 2999.17, text, lens
+  ghc-prof-options: -O2 -prof -auto-all
